welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: value =< is not a member of Int
		if ( a <= b && b=< c ) {
                                ^